# bunpell

./: .gitignore  README.md  bunpell.agda-lib  bunpell.cabal  flake.nix
app/: Main.hs
src/: Bunpell.agda  Bunpell.hs  Lib.hs  Pre.hs  Validate.hs
test/: Main.hs
